<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:hint="Estado">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:text="@string/tv_titulo" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:paddingTop="10dp"
        android:text="@string/btn_guardar" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:hint="@string/tv_nombre" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:hint="@string/tv_apellido"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:hint="@string/tv_numerodetarjeta" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:hint="@string/tv_mes"
            android:padding="14dp" />

        <EditText
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:hint="@string/tv_año"
            android:padding="14dp" />

        <EditText
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:hint="@string/tv_codigo"
            android:padding="14dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="200dp"
            android:layout_height="25dp"
            android:text="@string/tv_direccion" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:hint="@string/tv_calleynumero" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:hint="@string/tv_ciudad" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:hint="@string/tv_estado"
            android:padding="14dp" />
        <EditText
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:hint="@string/tv_codigo_postal" />



    </LinearLayout>















</LinearLayout>